# borealis

./: .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Makefile  ar_wrapper.cpp  log.ini  test.c  wrapper  wrapper.conf  wrapper.cpp  wrapper.d  wrapper.tassadar.conf  wrapper.tests.conf  z3.params
Actions/: FindPrototypesAction.cpp  FindPrototypesAction.h  FindPrototypesConsumer.cpp  FindPrototypesConsumer.h  FindPrototypesVisitor.cpp  FindPrototypesVisitor.h  SplitStructAction.cpp  SplitStructAction.h  SplitStructConsumer.cpp  SplitStructConsumer.h  SplitStructVisitor.cpp  SplitStructVisitor.h  comments_location.cpp  comments_location.h
Actions/TestGen/: LocateFunctionsAction.h  LocateFunctionsConsumer.h  LocateFunctionsVisitor.cpp  LocateFunctionsVisitor.h  LocateGuardsAction.cpp  LocateGuardsAction.h  LocateGuardsCallbacks.cpp  LocateGuardsCallbacks.h  LocateIncludesAction.cpp  LocateIncludesAction.h  LocateIncludesCallbacks.cpp  LocateIncludesCallbacks.h
Anno/: production.cpp  production.h
Codegen/: llvm.cpp  llvm.h
Codegen/CType/: CArray.h  CFunction.cpp
Config/: config.h
Database/: SerialTemplateSpec.hpp
Driver/: ar_facade.h  cl.h  clang_pipeline.cpp  clang_pipeline.h  gestalt.cpp  interviewer.cpp  llvm_module_pipeline.cpp  llvm_module_pipeline.h  llvm_pipeline.cpp  llvm_pipeline.h  mpi_driver.cpp  mpi_driver.h
Logging/: logger.hpp
Passes/Checker/: CheckContractPass.cpp  CheckContractPass.h  CheckHelper.hpp  CheckManager.cpp  CheckNullDereferencePass.cpp  CheckNullDereferencePass.h  CheckOutOfBoundsPass.cpp  CheckOutOfBoundsPass.h  CheckUndefValuesPass.cpp  CheckUndefValuesPass.h
Passes/Contract/: Contract.cpp  Contract.h  ContractContainer.cpp  ContractContainer.h  ContractManager.cpp  ContractManager.h  ContractSummaryPass.cpp  ContractSummaryPass.h  FunctionIdentifier.cpp  FunctionIdentifier.h  ProtobufConverterImpl.cpp  ProtobufConverterImpl.hpp
Passes/Defect/: DefectManager.cpp  DefectManager.h  DefectSummaryPass.cpp  PersistentFunctionData.cpp  PersistentFunctionData.h
Passes/MPI/: DefectDistributor.cpp  DefectDistributor.h  FunAnalyzeChoicer.cpp  MPIMetricsEval.cpp  PersistentDefectDataMerger.cpp  PersistentDefectDataMerger.h  PersistentFunctionDataMerger.cpp  PersistentFunctionDataMerger.h
Passes/Manager/: ContractManager.cpp  ContractManager.h  FunctionManager.cpp  FunctionManager.h
Passes/Misc/: AdaptorPass.cpp
Passes/PredicateAnalysis/: DefaultPredicateAnalysis.cpp  DefaultPredicateAnalysis.h
Passes/PredicateStateAnalysis/: OneForAll.cpp  OneForAll.h  PredicateStateAnalysis.cpp
Passes/TestGeneration/: CUnitDumperPass.cpp  CUnitDumperPass.h  FunctionInfoPass.cpp  FunctionInfoPass.h  TestDumpPass.cpp  TestDumpPass.h  TestGenerationPass.cpp  TestGenerationPass.h  TestManager.cpp  TestManager.h  TestStatisticsDumpPass.cpp  TestStatisticsDumpPass.h
Passes/Tracker/: FunctionAnnotationTracker.cpp  FunctionAnnotationTracker.h  MetaInfoTracker.cpp  MetaInfoTracker.h  SourceLocationTracker.cpp
Passes/Transform/: AtomicInstLifting.cpp  AtomicInstLifting.h  ContractExtractorPass.cpp  ContractExtractorPass.h  ContractExtractorPass.h.orig  GlobalVariableLifting.cpp  LoopDeroll.cpp
Passes/Util/: FunAnalyzeChoicer.cpp  FunAnalyzeChoicer.h  MPIMetricsEval.cpp  MPIMetricsEval.h  PassModularizer.hpp
Predicate/: AllocaPredicate.cpp  AllocaPredicate.h  CallPredicate.cpp  CallPredicate.h  CallPredicate.proto  CastPredicate.cpp  CastPredicate.h  DefaultSwitchCasePredicate.cpp  DefaultSwitchCasePredicate.h  EqualityPredicate.cpp  EqualityPredicate.h  GlobalsPredicate.cpp  GlobalsPredicate.h  InequalityPredicate.cpp  InequalityPredicate.h  MallocPredicate.cpp  MallocPredicate.h  MarkPredicate.cpp  MarkPredicate.h  Predicate.cpp  Predicate.def  Predicate.h  PredicateFactory.h  ProtobufConverterImpl.hpp  SeqDataPredicate.cpp  SeqDataPredicate.h  SeqDataZeroPredicate.cpp  StorePredicate.cpp  StorePredicate.h  WriteBoundPredicate.cpp  WriteBoundPredicate.h  WritePropertyPredicate.cpp  WritePropertyPredicate.h
Protobuf/: Converter.cpp  Converter.hpp
SMT/: SMTUtil.h
SMT/Boolector/: BoolectorEngine.h  Solver.h
SMT/CVC4/: CVC4Engine.h  Solver.h
SMT/MathSAT/: ExecutionContext.h  ExprFactory.cpp  ExprFactory.h  Logic.cpp  Logic.hpp  MathSatTypes.h  Solver.cpp
SMT/STP/: Solver.h
SMT/Z3/: ExecutionContext.cpp  ExecutionContext.h  ExprFactory.cpp  ExprFactory.h  Logic.cpp  Logic.hpp  Solver.cpp  Solver.h  Z3.h
State/: BasicPredicateState.cpp  PredicateState.def  PredicateState.h  PredicateStateChain.cpp  PredicateStateChoice.cpp  PredicateStateFactory.cpp  PredicateStateFactory.h  PredicateStateImply.cpp  PredicateStateImply.h  ProtobufConverterImpl.hpp
State/Transformer/: AnnotationMaterializer.cpp  ArgumentUnifier.cpp  (+57 more)
Term/: ArgumentCountTerm.cpp  ArgumentTerm.cpp  AxiomTerm.cpp  AxiomTerm.h  BinaryTerm.cpp  BinaryTerm.h  BoundTerm.cpp  BoundTerm.h  CastTerm.cpp  CastTerm.h  CmpTerm.cpp  CmpTerm.h  ConstTerm.cpp  FreeVarTerm.cpp  FreeVarTerm.h  GepTerm.cpp  GepTerm.h  LoadTerm.cpp  LoadTerm.h  OpaqueBigIntConstantTerm.cpp  OpaqueBoolConstantTerm.cpp  OpaqueBuiltinTerm.cpp  OpaqueCallTerm.cpp  OpaqueCallTerm.h  OpaqueFloatingConstantTerm.cpp  OpaqueFloatingConstantTerm.h  OpaqueIndexingTerm.cpp  OpaqueIndexingTerm.h  OpaqueIntConstantTerm.cpp  OpaqueIntConstantTerm.h  OpaqueInvalidPtrTerm.cpp  OpaqueMemberAccessTerm.cpp  OpaqueMemberAccessTerm.h  OpaqueNamedConstantTerm.cpp  OpaqueNullPtrTerm.cpp  OpaqueStringConstantTerm.cpp  OpaqueUndefTerm.cpp  OpaqueVarTerm.cpp  ProtobufConverterImpl.hpp  ReadPropertyTerm.cpp  (+15 more)
TestGen/: FunctionInfo.cpp  FunctionInfo.h  FunctionsInfoData.h  PrototypesInfo.h  SourceLocations.h  TestCase.cpp  TestCase.h  TestStatistics.cpp  TestStatistics.h  TestSuite.cpp  TestSuite.h  TestUnit.cpp  TestUnit.h  util.cpp  util.h
Type/: Bool.cpp  Float.h  Record.h  TypeFactory.h  TypeUtils.h
Util/: FunChoicer.cpp  FunChoicer.h  collections.hpp  filename_utils.cpp  filename_utils.h  hash.hpp  indexed_string.hpp  util.cpp  util.h  util.hpp
resources/: stdLib.json
test/: test_mathsat.cpp  test_wrapper.cpp  test_z3.cpp
(+47 files in other folders)
